🎨 Fix button styling/wrapping. Nuke legacy style

--- a/src/index.css
+++ b/src/index.css
@@ -16,25 +16,8 @@ h1, h2, h3, h4 {
 	font-weight: bold;
 }
 
-.App>div {
-  -moz-border-radius:5px;
-  -moz-box-shadow:0px 0px 59px 8px #000000 ;
-  -webkit-border-radius:5px;
-  -webkit-box-shadow:0px 0px 59px 8px #000000 ;
-  background:none repeat 0 0 rgba(255, 255, 255, 0.333);
-  border-radius:5px;
-  box-shadow:0px 0px 59px 8px #000000 ;
-  padding: 20px;
-}
-
 #buttons {
 	text-align: center;
-}
-
-a {
-	color: #ccc;
-	font-weight: 600;
-	text-decoration: underline;
 }
 
 div p, ul{
